--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,14 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "Sign Up", signup_path  '#' %></li>
-            <li><%= link_to "Log In", login_path %></li>
+            <% if !logged_in? %>
+              <li><%= link_to "Sign Up", signup_path  '#' %></li>
+              <li><%= link_to "Log In", login_path %></li>
+            <% else %>
+              <li><%= link_to "Landmarks", landmarks_path %></li>
+              <li><%= link_to "Categories", categories_path %></li>
+              <li><%= link_to "Neighborhoods", neighborhoods_path %></li>
+            <% end %>  
           </ul>
         </nav>
       </div>
