--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
             <% if !logged_in? %>
-              <li><%= link_to "Sign Up", signup_path  '#' %></li>
+              <li><%= link_to "Sign Up", signup_path %></li>
               <li><%= link_to "Log In", login_path %></li>
             <% else %>
               <li><%= link_to "Landmarks", landmarks_path %></li>
