--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
         </nav>
       </div>
     </header>
-  
+  <% if flash[:notice] %>
+    <div class="notice"><%= flash[:notice] %></div>
+  <% end %>
     <div class="container">
       <%= yield %>
     </div>
