--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,10 @@
 <% provide(:title, "Home") %>
 
-<h1>Welcome to the New Orleans Vacation Planner!</h1>
+<div class="center jumbotron">
+	<h1>Welcome to the New Orleans Vacation Planner!</h1>
 
-<%= image_tag("nolaskyline.jpeg", alt: "New Orleans skyline") %>
+	<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
+	<%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
+
+	<%= image_tag("nolaskyline.jpeg", alt: "New Orleans skyline") %>
+</div>	
