--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
-            <% if !logged_in? %>
+            <% if !current_user %>
               <li><%= link_to "Sign Up", signup_path %></li>
               <li><%= link_to "Log In", login_path %></li>
             <% else %>
