--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,5 +6,5 @@
 	<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
 	<%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
 
-	<%= image_tag("nolaskyline.jpeg", alt: "New Orleans skyline") %>
+	<%= image_tag("nolaskyline.jpeg", alt: "New Orleans skyline", class: "img-responsive") %>
 </div>	
