basic landmark new and index pages

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,8 +36,8 @@
 	</div>
 
 	<div class="form-group">
-		<%= f.label :guide_status, "Check this box if you are a licensed tour guide" %>
-		<%= f.check_box :guide_status, class: "form-control" %>
+		<%= f.label :guide_status, "Check this box if you are a licensed tour guide:   " %>
+		<%= f.check_box :guide_status %>
 	</div>
 
 	<div class="action">
