--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -1,3 +1,5 @@
+<h1>Local Landmarks:</h1>
+
 <% @landmarks.each do |landmark| %>
 	<%= link_to landmark.name, landmark_path(landmark) %>
 	<ul>
@@ -7,5 +9,5 @@
 <% end %>	
 
 <% if current_user.guide_status %>
-	<%= link_to "Add a New Landmark", new_landmark_path %>
+	<%= link_to "Add a New Landmark", new_landmark_path, class: "btn btn-primary" %>
 <% end %>
