--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,3 +5,7 @@
 		<li><%= link_to category.name, category_path(category) %></li>
 	<% end %>
 </ul>		
+
+<% if current_user.guide_status %>
+	<%= link_to "Add a New Category", new_category_path, class: "btn btn-primary" %>
+<% end %>
