create edit functionality for category

--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -2,6 +2,6 @@
 <ul>
 	<% @neighborhoods.each do |neighborhood| %>
 		<li><%= link_to neighborhood.name, neighborhood_path(neighborhood) %> </li>
-		<p><%= neighborhood.description</p>
+		<p><%= neighborhood.description %></p>
 	<% end %>	
 </ul>
