--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,5 @@
-<h1><%= @category.name %> Landmarks:</h1>
+<h1><%= @category.name %></h1>
+
+<% if current_user.guide_status %>
+	<%= link_to "Edit This Category", edit_category_path(@category), class: "btn btn-primary" %>
+<% end %>	
