--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
+              <li><%= link_to "My Trip Planner", user_path(current_user) %> </li>
               <li><%= link_to "Landmarks", landmarks_path %></li>
               <li><%= link_to "Categories", categories_path %></li>
               <li><%= link_to "Neighborhoods", neighborhoods_path %></li>
