--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -14,6 +14,14 @@
 
 <h4><%= link_to "Find out more", @landmark.more_info_link %></h4>
 
+<% if !current_user.landmarks.include?(@landmark) %>
+	<%= form_for @visit do |f| %>
+		<%= f.hidden_field :user_id %>
+		<%= f.hidden_field :landmark_id %>
+		<%= f.submit "Add to Itinerary", class: "btn btn-light" %>
+	<% end %>
+<% end %>	
+
 <% if current_user.guide_status %>
 	<%= link_to "Edit This Landmark", edit_landmark_path(@landmark), class: "btn btn-primary" %>
 <% end %>	
