--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <body>
   <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to image_tag("logo.png", alt: "logo", class: "span-3"), root_path %>
+        <%= image_tag("logo.png", alt: "logo", class: "span-3")%>
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
