--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,8 +3,10 @@
 <div class="center jumbotron">
 	<h1>Welcome to the New Orleans Vacation Planner!</h1>
 
-	<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
-	<%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
+	<% if !current_user %>
+		<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
+		<%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
+	<% end %> 
 
 	<%= image_tag("nolaskyline.jpeg", alt: "New Orleans skyline", class: "img-responsive") %>
 </div>	
