add google omniauth functionality

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to New Orleans, <%= @user.username %>!</h1>
+<h1>Welcome to New Orleans, <%= @user.name %>!</h1>
 
 <h2>Your Itinerary:</h2>
 <ul>
