--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Reviews:</h1>
 
 <% @reviews.each do |review| %>
-	<h4><%= review.user.username %> on <%= review.landmark.name %>: </h4>
+	<h4><%= review.user.name %> on <%= review.landmark.name %>: </h4>
 	<p><%= review.content %></p>
 	<% if review.user_id == current_user.id %>
 		<div class="btn-group">
-			<%= button_to "Edit", edit_user_review_path(current_user, review), class: "btn btn-default btn-xs" %>
+			<%= link_to "Edit", edit_user_review_path(review.user, review), class: "btn btn-default btn-xs" %>
 			<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
 		</div>	
 	<% end %>	
