--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,7 @@
 	<% if !current_user %>
 		<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
 		<%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
+		<%= link_to "Log In with Google!", '/auth/google_oauth2', class: "btn btn-lg btn-primary" %>
 	<% end %> 
 
 	<%= image_tag("nolaskyline.jpeg", alt: "New Orleans skyline", class: "img-responsive") %>
