--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,8 +16,8 @@
 	<% end %>
 	
 	<div class="form-group">
-		<%= f.label :username, "Enter a Username:" %>
-		<%= f.text_field :username, class: "form-control" %>
+		<%= f.label :name, "Enter a Name:" %>
+		<%= f.text_field :name, class: "form-control" %>
 	</div>	
 
 	<div class="form-group">
