create nested new form for reviews

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,3 +10,13 @@
 
 <h3>Want to add more stops to your itinerary?</h3>
 <%= link_to "View Landmarks", landmarks_path, class: "btn btn-primary" %>
+
+<br />
+<br />
+<% unless current_user.guide_status %>
+<h3><em>Do you know the city like the back of your hand? Do you roll your eyes whenever you hear someone say 'Nawlins'? Have you ever wrestled an alligator with your bare hands? If so, consider marking yourself as a tour guide. This allows you to edit and add new landmarks.</em></h3>
+	<%= form_for @user do |f| %>
+		<%= f.hidden_field :guide_status, value: true %>
+		<%= f.submit "Mark Yourself As Tour Guide", class: "btn btn-success" %>
+	<% end %>		 
+<% end %> 	
