--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -26,20 +26,6 @@
 	<%= link_to "Edit This Landmark", edit_landmark_path(@landmark), class: "btn btn-primary" %>
 <% end %>	
 
-<h3>Add Your Review of <%=@landmark.name%>:</h3>
-
-<%= form_for @review do |f| %>
-	<div class="form-group">
-		<%= f.hidden_field :user_id %>
-		<%= f.hidden_field :landmark_id %>
-		<%= f.text_area :content, class: "form-control" %>
-	</div>
-
-	<div class="action">
-		<%= f.submit %>
-	</div>
-<% end %>	
-
 <h3>Most Recent Reviews of <%= @landmark.name %>:</h3>
 
 <% @recent_reviews.each do |review| %>
@@ -47,9 +33,11 @@
 	<p><%= review.content %></p>
 	<br />
 <% end %>
-	 
 
-<%= link_to "See More Reviews", landmark_reviews_path(@landmark) %>
+<div class= "btn-group-justified">	 
+	<%= link_to "Add Your Review", new_landmark_review_path(@landmark, @review), class: "btn btn-success" %>
+	<%= link_to "See More Reviews", landmark_reviews_path(@landmark), class: "btn btn-primary" %>
+</div>	
 
 
 
