--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,13 +1,3 @@
 <h1>Edit Your Review of <%=@review.landmark.name%>:</h1>
 
-<%= form_for @review do |f| %>
-	<div class="form-group">
-		<%= f.hidden_field :user_id %>
-		<%= f.hidden_field :landmark_id %>
-		<%= f.text_area :content, class: "form-control" %>
-	</div>
-
-	<div class="action">
-		<%= f.submit %>
-	</div>
-<% end %>
+<%= render 'form' %>
