--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit Your Review of <%=@review.landmark.name%>:</h1>
 
-<%= render 'form' %>
+<%= render partial: 'form', locals: {review: @review} %>
