--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Write Your Review of <%= @landmark.name %></h1>
 
-<%= render 'form', locals: { landmark: @landmark } %>
+<%= render partial: 'form', locals: { review: @review} %>
