--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for review do |f| %>
+<%= form_for [landmark, review] do |f| %>
 	<div class="form-group">
 		<%= f.hidden_field :user_id %>
 		<%= f.hidden_field :landmark_id %>
