--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -5,7 +5,7 @@
 	<p><%= review.content %></p>
 	<% if review.user_id == current_user.id %>
 		<div class="btn-group">
-			<%= link_to "Edit", edit_user_review_path(review.user, review), class: "btn btn-default btn-xs" %>
+			<%= link_to "Edit", edit_landmark_review_path(review.landmark, review), class: "btn btn-default btn-xs" %>
 			<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
 		</div>	
 	<% end %>	
