--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <h2>Your Itinerary:</h2>
 <ul>
 	<% @visits.each do |visit| %>
-		<li><h3><%= link_to visit.landmark.name, landmark_path(visit.landmark) %> - <%= visit.landmark.neighborhood.name %></h3></li>
+		<li><h3><%= link_to visit.landmark.name, landmark_path(visit.landmark) %> - <%= visit.landmark.category.name %> - <%= visit.landmark.neighborhood.name %></h3></li>
 		<%= button_to 'Remove from Itinerary', { controller: :visits, action: :destroy, id: visit.id }, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning btn-xs" %>
 	<% end %>	
 </ul>	
@@ -13,7 +13,6 @@
 
 <br />
 <br />
-<%= link_to "Edit Your Profile", edit_user_path(current_user), class: "btn btn-primary" %>
 
 <% unless current_user.guide_status %>
 <h3><em>Do you know the city like the back of your hand? Do you roll your eyes whenever you hear someone say 'Nawlins'? Have you ever wrestled an alligator with your bare hands? If so, consider marking yourself as a tour guide. This allows you to edit and add new landmarks.</em></h3>
