--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -6,7 +6,7 @@
 	<% if review.user_id == current_user.id %>
 		<div class="btn-group">
 			<%= link_to "Edit", edit_landmark_review_path(review.landmark, review), class: "btn btn-default btn-xs" %>
-			<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
+			<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure you want to delete your review?' }, class: "btn btn-danger btn-xs" %>
 		</div>	
 	<% end %>	
 	<br />
