add before_action to neighborhoods, add photos to neighborhood index page, add class to landmark photos on index page

--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -2,12 +2,12 @@
 
 <% @landmarks.each do |landmark| %>
 	<h3><%= link_to landmark.name, landmark_path(landmark) %></h3>
-	<%= image_tag landmark.image_link, class: "img-rounded" %>
-	<ul>
+	<%= image_tag landmark.image_link, class: "img-rounded img-responsive" unless !landmark.image_link %>
+	<h4><ul>
 		<li>Category: <%= link_to landmark.category.name, category_path(landmark.category) %></li>
 		<li>Neighborhood: <%= link_to landmark.neighborhood.name, neighborhood_path(landmark.neighborhood) %></li>
 		<li>Description: <%= landmark.description %> </li>	
-	</ul>
+	</ul></h4>
 <% end %>	
 
 <% if current_user.guide_status %>
