--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -1,8 +1,9 @@
 <h1>New Orleans Neighborhoods:</h1>
 <ul>
 	<% @neighborhoods.each do |neighborhood| %>
-		<li><%= link_to neighborhood.name, neighborhood_path(neighborhood) %> </li>
-		<p><%= neighborhood.description %></p>
+		<li><h3><%= link_to neighborhood.name, neighborhood_path(neighborhood) %></h3> </li>
+		<%= image_tag neighborhood.image_link, class: "img-rounded img-responsive" unless !neighborhood.image_link %>
+		<h4><%= neighborhood.description %></h4>
 	<% end %>	
 </ul>
 
