--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,9 +2,11 @@
 
 <ul>
 	<% @categories.each do |category| %>
-		<li><%= link_to category.name, category_path(category) %></li>
+		<li><h3><%= link_to category.name, category_path(category) %></h3></li>
 	<% end %>
-</ul>		
+</ul>
+
+<br />		
 
 <% if current_user.guide_status %>
 	<%= link_to "Add a New Category", new_category_path, class: "btn btn-primary" %>
