--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -34,7 +34,8 @@
 	<h3> <%= review.user.name %> says: </h3>
 	<p><%= review.content %></p>
 	<% if review.user_id == current_user.id %>
-		<%= link_to "Edit", edit_landmark_review_path(@landmark, review) %>
+		<%= link_to "Edit", edit_landmark_review_path(@landmark, review), class: "btn btn-default btn-xs" %>
+		<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure you want to delete your review?' }, class: "btn btn-danger btn-xs" %>
 	<% end %>	
 	<br />
 <% end %>
