--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,13 +1,16 @@
 <h1>Reviews:</h1>
-
-<% @reviews.each do |review| %>
-	<h4><%= review.user.name %> on <%= review.landmark.name %>: </h4>
-	<p><%= review.content %></p>
-	<% if review.user_id == current_user.id %>
-		<div class="btn-group">
-			<%= link_to "Edit", edit_landmark_review_path(review.landmark, review), class: "btn btn-default btn-xs" %>
-			<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure you want to delete your review?' }, class: "btn btn-danger btn-xs" %>
-		</div>	
-	<% end %>	
-	<br />
-<% end %>
+<% if @reviews.empty? %>
+	<h3>There are no reviews to show.</h3>
+<% else %>	
+	<% @reviews.each do |review| %>
+		<h4><%= review.user.name %> on <%= review.landmark.name %>: </h4>
+		<p><%= review.content %></p>
+		<% if review.user_id == current_user.id %>
+			<div class="btn-group">
+				<%= link_to "Edit", edit_landmark_review_path(review.landmark, review), class: "btn btn-default btn-xs" %>
+				<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure you want to delete your review?' }, class: "btn btn-danger btn-xs" %>
+			</div>	
+		<% end %>	
+		<br />
+	<% end %>
+<% end %>	
