--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -33,6 +33,7 @@
 <% @recent_reviews.each do |review| %>
 	<h3> <%= review.user.name %> says: </h3>
 	<p><%= review.content %></p>
+	<h6><em><%= review.posted_at %></em></h6>
 	<% if review.user_id == current_user.id %>
 		<%= link_to "Edit", edit_landmark_review_path(@landmark, review), class: "btn btn-default btn-xs" %>
 		<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure you want to delete your review?' }, class: "btn btn-danger btn-xs" %>
