--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -31,14 +31,7 @@
 <h3>Most Recent Reviews of <%= @landmark.name %>:</h3>
 
 <% @recent_reviews.each do |review| %>
-	<h3> <%= review.user.name %> says: </h3>
-	<p><%= review.content %></p>
-	<h6><em><%= posted_at review %></em></h6>
-	<% if review.user_id == current_user.id %>
-		<%= link_to "Edit", edit_landmark_review_path(@landmark, review), class: "btn btn-default btn-xs" %>
-		<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure you want to delete your review?' }, class: "btn btn-danger btn-xs" %>
-	<% end %>	
-	<br />
+	<%= render partial: 'reviews/review_index', locals: { review: review } %>
 <% end %>
 
 <div class= "btn-group-justified">	 
