--- a/app/views/users/_errors.html.erb
+++ b/app/views/users/_errors.html.erb
@@ -1,7 +1,7 @@
 <% if model.errors.any? %>
 		<div id="error_explanation">
 			<h2>
-				<%= pluralize(@user.errors.count, "error") %> prohibited your <%= item %> from being created:
+				<%= pluralize(model.errors.count, "error") %> prohibited your <%= item %> from being created:
 			</h2>
 
 			<ul>
