--- a/app/views/neighborhoods/_form.html.erb
+++ b/app/views/neighborhoods/_form.html.erb
@@ -1,17 +1,5 @@
 <%= form_for @neighborhood do |f| %>
-	<% if @neighborhood.errors.any? %>
-		<div id="error_explanation">
-			<h2>
-				<%= pluralize(@neighborhood.errors.count, "error") %> prohibited your neighborhood from being created:
-			</h2>
-
-			<ul>
-				<% @neighborhood.errors.full_messages.each do |message| %>
-					<li><%= message %></li>
-				<% end %>	
-			</ul>
-		</div>
-	<% end %>
+	<%= render partial: 'users/errors', locals: { model: @neighborhood, item: "neighborhood" } %>
 
 	<div class="form-group">
 		<%= f.label :name, "Name:" %>
