--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
             <% if current_user %>
               <li><%= link_to "My Trip Planner", user_path(current_user) %> </li>
               <li><%= link_to "My Reviews", user_reviews_path(current_user) %></li>
+              <li><%= link_to "Recent Reviews", recent_reviews_path %></li>
               <li><%= link_to "Landmarks", landmarks_path %></li>
               <li><%= link_to "Categories", categories_path %></li>
               <li><%= link_to "Neighborhoods", neighborhoods_path %></li>
