--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @landmarks.each do |landmark| %>
 	<h3><%= link_to landmark.name, landmark_path(landmark) %></h3>
-	<%= image_tag landmark.image_link %>
+	<%= image_tag landmark.image_link, style: "width: 40%" %>
 	<h4><ul>
 		<li>Category: <%= link_to landmark.category.name, category_path(landmark.category) %></li>
 		<li>Neighborhood: <%= link_to landmark.neighborhood.name, neighborhood_path(landmark.neighborhood) %></li>
