add category view button to landmark show page and attach event handler

--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Local Landmarks:</h1>
 
+<%= link_to "View Categories", categories_path, id: "view-cats", class: "btn btn-primary" %> 
+
+<div id="categories"></div>
+
 <% @landmarks.each do |landmark| %>
 	<h3><%= link_to landmark.name, landmark_path(landmark) %></h3>
 	<%= image_tag landmark.image_link, style: "width: 40%" %>
