--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -6,7 +6,9 @@
 <p class="neighborhoodDescription"><%= @neighborhood.description %></p>
 
 <% if current_user.guide_status %>
-	<%= link_to "Edit This Neighborhood", edit_neighborhood_path(@neighborhood), class: "btn btn-primary" %>
+	<div class="edit-neighborhood">
+		<%= link_to "Edit This Neighborhood", edit_neighborhood_path(@neighborhood), class: "btn btn-primary" %>
+	</div>	
 <% end %>	
 
 <h2>Landmarks in this neighborhood:</h2>
@@ -27,6 +29,7 @@ $(function () {
       $(".neighborhoodName").text(neighborhood["name"]);
       $(".neighborhoodDescription").text(neighborhood["description"]);
       $(".neighborhoodImage img").attr("src", neighborhood["image_link"]);
+      $(".edit-neighborhood a").attr("href", `/neighborhoods/${nextId}/edit`)
       // re-set the id to current on the link
       $(".js-next").attr("data-id", neighborhood["id"]);
     });
