add landmark list to ajax next function

--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -13,9 +13,11 @@
 
 <h2>Landmarks in this neighborhood:</h2>
 <ul>
+<div id="list-landmarks">	
 <% @landmarks.each do |landmark| %>
 	<li><h3><%= link_to landmark.name, landmark_path(landmark) %> - <%= landmark.category.name %></h3></li>
 <% end %> 
+</div>
 </ul>	
 
 <a href="#" class="js-next" data-id="<%=@neighborhood.id%>">Next Neighborhood</a>
@@ -25,12 +27,19 @@ $(function () {
   $(".js-next").on("click", function() {
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
     $.get("/neighborhoods/" + nextId + ".json", function(data) {
-      var neighborhood = data;
-      debugger
+      let neighborhood = data;
+      let landmarks = neighborhood["landmarks"]
+      $('#list-landmarks').empty();
+      landmarks.forEach(listLandmark);
+      function listLandmark(landmark) {
+      	$('#list-landmarks').append(`<li><h3><a href="/landmarks/${landmark.id}">${landmark.name}</a></h3></li>`)
+      }
+      
       $(".neighborhoodName").text(neighborhood["name"]);
       $(".neighborhoodDescription").text(neighborhood["description"]);
       $(".neighborhoodImage img").attr("src", neighborhood["image_link"]);
       $(".edit-neighborhood a").attr("href", `/neighborhoods/${nextId}/edit`)
+
       // re-set the id to current on the link
       $(".js-next").attr("data-id", neighborhood["id"]);
     });
