--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Local Landmarks:</h1>
 
-<%= link_to "View Categories", categories_path, id: "view-cats", class: "btn btn-primary" %> 
+<button id="view-cats" class="btn btn-primary">Show Categories</button>
 <button id="hide-cats" class="btn btn-primary">Hide Categories</button>
 
 <div>
