use ajax to display new review form on landmark show page

--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -30,12 +30,18 @@
 
 <h3>Most Recent Reviews of <%= @landmark.name %>:</h3>
 
+<div id="new-reviews"></div>
+
 <div id="landmark-reviews">
 	<%= render partial: 'reviews/review_index', locals: { array: @recent_reviews } %>
 </div>
 
+<div id="new-review-form">
+	
+</div>
+
 <div class= "btn-group-justified">	 
-	<%= link_to "Add Your Review", new_landmark_review_path(@landmark, @review), class: "btn btn-success" %>
+	<%= link_to "Add Your Review", new_landmark_review_path(@landmark, @review), id: "add-review", class: "btn btn-success" %>
 	<%= link_to "See More Reviews", landmark_reviews_path(@landmark), id: "more-reviews", class: "btn btn-primary" %>
 </div>
 
