--- a/app/views/reviews/_review_index.html.erb
+++ b/app/views/reviews/_review_index.html.erb
@@ -1,9 +1,9 @@
 <% array.each do |review| %>
 	<h3> On <%= link_to review.landmark.name, landmark_path(review.landmark) %>, <%= review.user.name %> says: </h3>
-		<p><%= review.content %></p>
+		<p id="review-content"><%= review.content %></p>
 		<h6><em><%= posted_at review %></em></h6>
 		<% if review.user_id == current_user.id %>
-			<%= link_to "Edit", edit_landmark_review_path(review.landmark, review), class: "btn btn-default btn-xs" %>
+			<%= link_to "Edit", edit_landmark_review_path(review.landmark, review), class: "edit-review btn btn-default btn-xs" %>
 			<%= button_to 'Delete', { controller: :reviews, action: :destroy, id: review.id }, method: :delete, data: { confirm: 'Are you sure you want to delete your review?' }, class: "btn btn-danger btn-xs" %>
 		<% end %>	
 		<br />
