--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -1,11 +1,20 @@
 <h1>Local Landmarks:</h1>
 
 <button id="view-cats" class="btn btn-primary">Show Categories</button>
+<button id="view-neighborhoods" class="btn btn-primary">Show Neighborhoods</button>
 
 <div id="categories", style="display: none">
 	<ul>
 		<% @categories.each do |category| %>
 			<li><h4><%= link_to category.name, category_path(category) %></h4></li>
+		<% end %>	
+	</ul>
+</div>
+
+<div id="neighborhood-list", style="display: none">
+	<ul>
+		<% @neighborhoods.each do |neighborhood| %>
+			<li><h4><%= link_to neighborhood.name, neighborhood_path(neighborhood) %></h4></li>
 		<% end %>	
 	</ul>
 </div>
