tweaking prev next show buttons

--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -20,5 +20,6 @@
 </div>
 </ul>	
 
-<a href="#" class="js-next" data-id="<%=@neighborhood.id%>">Next Neighborhood</a>
+	<a href="#" class="js-prev" data-id="<%=@neighborhood.id%>">Previous Neighborhood</a>
+	<a href="#" class="js-next" data-id="<%=@neighborhood.id%>">Next Neighborhood</a>
 
